--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-pandas~=2.1.4
+pandas~=1.5.3
 darts~=0.27.2
 numpy~=1.26.4
 scikit-learn~=1.4.1.post1
 sktime~=0.27.0
 statsmodels~=0.14.1
 matplotlib~=3.8.3
+PyYAML~=6.0.1
