--- a/project/models/ensemblers.yml
+++ b/project/models/ensemblers.yml
@@ -1,3 +1,10 @@
+# The pipeline accepts custom weighting schemes and regression metamodels from the sklearn library (by now)
+# I am not sure if models from other libraries work as well (not yet tested)
+# They should work, when they have a .fit(X_t, y_t) and a .predict(X_(t+1)) method
+# where X_t or X_(t+1) are the predictions from the individual models in period t or t+1
+# and y_t are the actual values in period t
+# See models here:
+# sklearn: https://scikit-learn.org/stable/user_guide.html
 weighted:
   Simple: equal_weights
   Inverse RMSE: inv_rmse_weights
