--- a/project/models/forecasters.yml
+++ b/project/models/forecasters.yml
@@ -1,4 +1,13 @@
   without_covariates:
+#    Prophet:
+#      model: Prophet
+#      package: sktime
+#      options:
+#        freq: M
+#        add_seasonality:
+#          name: seasonality
+#          period: 12
+#          fourier_order: 12
     Naive:
       model: NaiveForecaster
       package: sktime
@@ -39,19 +48,19 @@
       options:
         lags: 10
   with_covariates:
-    AutoSARIMAX:
-      model: AutoARIMA
-      package: sktime
-      options:
-        seasonal: True
-        stationary: False
-        d: 1
-        trace: False
-        update_pdq: False
-        with_intercept: auto
-        max_p: 6
-        max_q: 6
-        suppress_warnings: True
+#    AutoSARIMAX:
+#      model: AutoARIMA
+#      package: sktime
+#      options:
+#        seasonal: True
+#        stationary: False
+#        d: 1
+#        trace: False
+#        update_pdq: False
+#        with_intercept: auto
+#        max_p: 6
+#        max_q: 6
+#        suppress_warnings: True
     XGBoost:
       model: XGBModel
       package: darts
