--- a/project/models/forecasters.yml
+++ b/project/models/forecasters.yml
@@ -48,23 +48,23 @@ without_covariates:
     options:
       lags: 10
 with_covariates:
-  #    AutoSARIMAX:
-  #      model: AutoARIMA
-  #      package: sktime
-  #      options:
-  #        seasonal: True
-  #        stationary: False
-  #        d: 1
-  #        trace: False
-  #        update_pdq: False
-  #        with_intercept: auto
-  #        max_p: 6
-  #        max_q: 6
-  #        suppress_warnings: True
-  XGBoost:
-    model: XGBModel
-    package: darts
-    options:
-      lags: 10
-      lags_past_covariates: 10
+#    AutoSARIMAX:
+#      model: AutoARIMA
+#      package: sktime
+#      options:
+#        seasonal: True
+#        stationary: False
+#        d: 1
+#        trace: False
+#        update_pdq: False
+#        with_intercept: auto
+#        max_p: 6
+#        max_q: 6
+#        suppress_warnings: True
+#  XGBoost:
+#    model: XGBModel
+#    package: darts
+#    options:
+#      lags: 6
+#      lags_past_covariates: 6
 
