--- a/paper/pipeline/inputs/forecasters_eurusd.yml
+++ b/paper/pipeline/inputs/forecasters_eurusd.yml
@@ -1,20 +1,13 @@
-# Note: Model names are not allowed to duplicate between approaches!
-without_covariates:
-#  skProphet:
-#    model: Prophet
-#    package: sktime
-#    options:
-#      freq: M
-  Naive: # Note that this is the forecaster's name! If you want to select_forecasters, use this!
+# Note: Model names are not allowed to duplicate!
+# Below we add some sample forecasters.
+# You can add new forecasters as described in the ReadMe 
+# or activate/deactivate exisiting ones.
+without_covariates:  # These models do not include covariates for fitting and prediction.
+  Naive: # Note that this is the forecaster's name! If you want to select_forecasters, use this string!
     model: NaiveForecaster
     package: sktime
     options:
       strategy: last
-#  Naive (drift):
-#    model: NaiveForecaster
-#    package: sktime
-#    options:
-#      strategy: drift
   AutoTheta:
     model: StatsForecastAutoTheta
     package: darts
@@ -39,22 +32,6 @@ without_covariates:
     options:
       trend: add
       seasonal: add
-#  RNN:
-#    model: RNNModel
-#    package: darts
-#    options:
-#      model: RNN
-#      input_chunk_length: 12
-#  LSTM:
-#    model: RNNModel
-#    package: darts
-#    options:
-#      model: LSTM
-#      input_chunk_length: 12
-#      n_epochs: 50
-#  Theta:
-#    model: ThetaForecaster
-#    options: {}
   TiDE:
     model: TiDEModel
     package: darts
@@ -71,6 +48,11 @@ without_covariates:
     package: darts
     options:
       lags: 10
+#  Naive (drift):
+#    model: NaiveForecaster
+#    package: sktime
+#    options:
+#      strategy: drift
 #  dartsProphet:
 #    model: Prophet
 #    package: darts
@@ -79,8 +61,31 @@ without_covariates:
 #        name: yearly_seasonality
 #        seasonal_periods: 12
 #        fourier_order: 10
-with_covariates:
-  AutoSARIMAX: # Note that this is the forecaster's name! If you want to select_forecasters, use this!
+#  skProphet:
+#    model: Prophet
+#    package: sktime
+#    options:
+#      freq: M
+#  RNN:
+#    model: RNNModel
+#    package: darts
+#    options:
+#      model: RNN
+#      input_chunk_length: 5
+#  LSTM:
+#    model: RNNModel
+#    package: darts
+#    options:
+#      model: LSTM
+#      input_chunk_length: 5
+#      n_epochs: 50
+#  Theta:
+#    model: ThetaForecaster
+#    package: sktime
+#    options: {}
+with_covariates:  # These models do include covariates for fitting and prediction.
+# If you do not want to include covariate models just leave an empty {} behind the "with_covariates".
+  AutoSARIMAX: # Note that this is the forecaster's name! If you want to select_forecasters, use this string!
     model: AutoARIMA
     package: sktime
     options:
